# mixpanel-unity

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Examples.unitypackage  ISSUE_ANALYSIS.md  LICENSE  README.md  Support.unitypackage  Tests.unitypackage  package.json  release.py
.github/: copilot-instructions.md
Demo/: MixpanelExample.cs  Sample.unity
Mixpanel/: Config.cs  Controller.cs  Extensions.cs  IPreferences.cs  JSON.cs  Log.cs  Mixpanel.asmdef  Mixpanel.cs  MixpanelAPI.cs  MixpanelAsync.cs  MixpanelBatching.cs  MixpanelConfig.cs  MixpanelID.cs  MixpanelLog.cs  MixpanelManager.cs  MixpanelPeople.cs  MixpanelPersistance.cs  MixpanelPlatformHelper.cs  MixpanelPooling.cs  MixpanelSettings.cs  MixpanelThread.cs  MixpanelValue.cs  MixpanelWorker.cs  PlayerPreferences.cs  Pooling.cs  Storage.cs  Value.cs  Worker.cs  todo
api-reference/: _mixpanel_example_8cs-example.html  annotated.html  classes.html  classmixpanel_1_1_mixpanel-members.html  classmixpanel_1_1_mixpanel.html  classmixpanel_1_1_mixpanel_1_1_people-members.html  classmixpanel_1_1_mixpanel_1_1_people.html  classmixpanel_1_1_mixpanel_1_1_people__coll__graph.dot  classmixpanel_1_1_mixpanel_1_1_people__coll__graph.md5  classmixpanel_1_1_mixpanel__inherit__graph.dot  classmixpanel_1_1_mixpanel__inherit__graph.md5  classmixpanel_1_1_value-members.html  classmixpanel_1_1_value.html  classmixpanel_1_1_value__coll__graph.dot  classmixpanel_1_1_value__coll__graph.md5  customdoxygen.css  dir_a36cc170f853cc8ae4c56cda7b0421bb.html  dir_a7492fe67bf38e21a2f82f578b6afbdf.html  dir_b8fbe884792abb7a07df1d800f01dc1d.html  dir_f5270461a96c42cbc40a56067da524ad.html  examples.html  functions.html  (+15 more)
native/tests/: CMakeLists.txt  replay_error_temporary_failure.py  test_server.py
native/tests/gtest/: CMakeLists.txt
native/tests/src/: bug_temporary_failure_occured.cpp  temporary_failure.inc  test_base64.cpp  test_config.hpp  test_engage.cpp  test_gdpr.cpp  test_huge_request.cpp  test_main.cpp  test_multiple_instances.cpp  test_network.cpp  test_persistence.cpp  test_set_push_id.cpp  test_super_properties.cpp  test_timed_events.cpp
(+137 files in other folders)
